--- a/public/styles/layout.css
+++ b/public/styles/layout.css
@@ -14,12 +14,19 @@ html {
  * Global layout stuff
  */
 
-body {
-  margin: 0;
+body {  
+  font-family: "Roboto Condensed", Sans-Serif; 
   color: #244751;
-  background-color: #eee;
+  background-color:rgb(236, 236, 236);
 }
 
+.container {
+  width: 450px;
+  height: 100% + 35px;
+  margin: 80px auto;
+  padding: 25px;
+  background-color: white;
+}
 /*
  * Additional CSS can be defined below or in other CSS files, as per instructions
  */
