--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -20,7 +20,31 @@
     display: inline-block;
     vertical-align: top;
     line-height: 2;
-    align-items: center;
     margin-left: 10px;
     font-size: 40px;
+}
+
+#nav-bar .compose-button {
+    display: inline-block; 
+    float: right;
+    position: relative;
+    top: 15px;
+    height: 45px;
+    width: 120px;
+    font-size: 24px;
+    background-color: white;
+    color: #00a087;
+    border: 1px solid black;
+    border-radius: 5px;
+    margin-right: 50px;
+}
+
+#nav-bar .compose-button:hover {
+    /* background-color: #418ff4; */
+    color: black;
+    border: 2px solid;
+}
+
+#nav-bar .compose-button .logo {
+    /* to fill out later */
 }
