--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,8 +1,10 @@
 .new-tweet {
+    display: inline-block;
     background-color: rgb(236, 236, 236);
     width: 400px;
+    height: 158px;
     border: solid 0.5px;
-    margin: 20px auto;
+    margin: 0px auto;
     /* Moves the container down from the header */
     padding: 10px;
     /* Creates padding inside of the container */
@@ -16,13 +18,51 @@
 }
 
 .new-tweet .textarea {
-    /* display: inline-block; */
     padding-left: 10px;
     padding-top: 10px;
     width: 100%;
+}
+
+.new-tweet .tweet-button:hover {
+    background-color: #418ff4;
 }
 
 .new-tweet .counter {
     float: right;
     background-color: rgb(236, 236, 236);
 }
+.new-tweet .error-container {
+    display: none;
+}
+
+.new-tweet .error-container .error {
+    display: inline-block;
+    text-align: center;
+    opacity: 1;
+    overflow: visible;
+    width: 400px;
+    border: 1px black solid;
+    border-radius: 10px;
+    font-size: 16px;
+    color: black;
+    background-color: red;
+    padding-top: 12px;
+    padding-bottom: 10px;
+    margin: 0 auto;
+    margin-left: -10px;
+    justify-content: space-between;
+  }
+  .new-tweet .error-container .error h2 {
+      font-weight: bold;
+      opacity: 1;
+      margin-top: -5px;
+  }
+
+  .new-tweet .error-container .error p {
+      opacity: 1;
+  }
+
+  .new-tweet .error-container .error button {
+      border-radius: 10px;
+      width: 70px;
+  }
