--- a/public/styles/nav.css
+++ b/public/styles/nav.css
@@ -25,7 +25,6 @@
 }
 
 #nav-bar .compose-button {
-    display: inline-block; 
     float: right;
     position: relative;
     top: 15px;
@@ -40,11 +39,10 @@
 }
 
 #nav-bar .compose-button:hover {
-    /* background-color: #418ff4; */
     color: black;
     border: 2px solid;
 }
 
-#nav-bar .compose-button .logo {
+/* #nav-bar .compose-button .logo { */
     /* to fill out later */
-}
+/* } */
