--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -1,4 +1,8 @@
-.new-tweet {
+.new-tweet-container {
+    display: none;
+}
+
+.new-tweet-container .new-tweet {
     display: inline-block;
     background-color: rgb(236, 236, 236);
     width: 400px;
@@ -10,32 +14,32 @@
     /* Creates padding inside of the container */
 }
 
-.new-tweet h2 {
+.new-tweet-container .new-tweet h2 {
    margin-top: 10px;
    /* Moves the "Compose Tweet" text down from the top */
    margin-bottom: 2px;
    /* Removes space between "Compose Tweet" and the solid line */
 }
 
-.new-tweet .textarea {
+.new-tweet-container .new-tweet .textarea {
     padding-left: 10px;
     padding-top: 10px;
     width: 100%;
 }
 
-.new-tweet .tweet-button:hover {
+.new-tweet-container .new-tweet .tweet-button:hover {
     background-color: #418ff4;
 }
 
-.new-tweet .counter {
+.new-tweet-container .new-tweet .counter {
     float: right;
     background-color: rgb(236, 236, 236);
 }
-.new-tweet .error-container {
+.new-tweet-container .new-tweet .error-container {
     display: none;
 }
 
-.new-tweet .error-container .error {
+.new-tweet-container .new-tweet .error-container .error {
     display: inline-block;
     text-align: center;
     opacity: 1;
@@ -50,18 +54,19 @@
     padding-bottom: 10px;
     margin: 0 auto;
     margin-left: -10px;
-  }
-  .new-tweet .error-container .error h2 {
-      font-weight: bold;
-      opacity: 1;
-      margin-top: -5px;
-  }
+}
 
-  .new-tweet .error-container .error p {
-      opacity: 1;
-  }
+.new-tweet-container  .new-tweet .error-container .error h2 {
+    font-weight: bold;
+    opacity: 1;
+    margin-top: -5px;
+}
 
-  .new-tweet .error-container .error button {
-      border-radius: 10px;
-      width: 70px;
-  }
+.new-tweet-container .new-tweet .error-container .error p {
+    opacity: 1;
+}
+
+.new-tweet-container .new-tweet .error-container .error button {
+    border-radius: 10px;
+    width: 70px;
+}
