--- a/public/styles/tweets-container.css
+++ b/public/styles/tweets-container.css
@@ -21,7 +21,7 @@
     background-color: white;
     height: 35%;
     width: 100%;
-    padding-top: 20px;
+    padding-top: 10px;
     padding-left: 10px;
     margin: 0px;
 }
@@ -40,6 +40,7 @@
     width: 100%;
     padding-left: 5px;
     padding-top: 10px;
+    /* margin-top: 5px; */
     border-top: solid 0.5px;
 }
 
