Hooking up the database to allow for users to register

--- a/public/views/urls_signup.ejs
+++ b/public/views/urls_signup.ejs
@@ -16,8 +16,8 @@
     <script type="text/javascript" src="../vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
-    <script type="text/javascript" src="../scripts/signup.js"></script>
-    <script type="text/javascript" src="../scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/top-navigation.js"></script>
+    <script type="text/javascript" src="../scripts/signup-jquery.js"></script>
 
   </head>
   <body>
@@ -32,11 +32,11 @@
           <h2>Sign Up</h2>
           <form id="signup-form" action="/signup" method="POST">
             <h3>First Name:</h3>
-            <input class="signup-field" type="email" name="text" placeholder="Please enter your first name..."></input>
+            <input class="signup-field" type="text" name="text" placeholder="Please enter your first name..."></input>
             <h3>Last Name:</h3>
             <input class="signup-field" type="text" name="text" placeholder="Please enter your last name..."></input>
             <h3>Username:</h3>
-            <input class="signup-field" type="text" name="text" placeholder="@your_user_name"></input>
+            <input class="signup-field" type="text" name="text" placeholder="Please enter your desired username..."></input>
             <h3>Password:</h3>
             <input class="signup-field" name="text" placeholder="Please enter a password..."></input>
           </form>
