--- a/public/views/urls_login.ejs
+++ b/public/views/urls_login.ejs
@@ -16,8 +16,8 @@
     <script type="text/javascript" src="../vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
-    <script type="text/javascript" src="../scripts/login.js"></script>
-    <script type="text/javascript" src="../scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/top-navigation.js"></script>
+    <script type="text/javascript" src="../scripts/login-jquery.js"></script>
 
 </head>
   <body>
