--- a/public/views/urls_signup.ejs
+++ b/public/views/urls_signup.ejs
@@ -32,25 +32,19 @@
           <h2>Sign Up</h2>
           <form id="signup-form" action="/signup" method="POST">
             <h3>First Name:</h3>
-            <input class="signup-field" type="text" name="text" placeholder="Please enter your first name..."></input>
+            <input class="signup-field" type="text" name="firstName" placeholder="Please enter your first name..."></input>
             <h3>Last Name:</h3>
-            <input class="signup-field" type="text" name="text" placeholder="Please enter your last name..."></input>
+            <input class="signup-field" type="text" name="lastName" placeholder="Please enter your last name..."></input>
             <h3>Username:</h3>
-            <input class="signup-field" type="text" name="text" placeholder="Please enter your desired username..."></input>
+            <input class="signup-field" type="text" name="username" placeholder="Please enter your desired username..."></input>
             <h3>Password:</h3>
-            <input class="signup-field" name="text" placeholder="Please enter a password..."></input>
-          </form>
-          <div class="signup-buttons-container">
-            <div>
-              <button form="signup-form" id="signup">Sign Up</button>
-            </div>
-            <div>
+            <input class="signup-field" type="password" name="password" autocomplete="off" placeholder="Please enter a password..."></input>
+            <input class="signup-form-button" type="submit" value="Sign Up"></input>
+            <span class="nav-to-login">
               <p style="display: inline">Already have an account? </p>
-              <form id="nav-to-login" style="display: inline" action="http://localhost:8080/login">
-                <input type="submit" value="Log In"></input>
-              </form>
-            </div>
-          </div>
+              <button type="button" class="button-to-login" onclick="window.location.href='http://localhost:8080/login'">Log In</button>
+            </span>
+          </form>
         </section>
       </main>
     </body>
