--- a/public/views/urls_index.ejs
+++ b/public/views/urls_index.ejs
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i" rel="stylesheet">
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="/styles/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="../styles/css-stylesheets/style.css" type="text/css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 
     <!-- External JS -->
@@ -28,17 +28,24 @@
     <nav id="nav-bar">
       <div id="nav-bar-header">
         <img class="logo" src="/images/bird.png">
-        <span class="header">Tweeter</span>
+          <span class="header">Tweeter</span>
       </div>
       <div>
-        <button class="compose-button">Compose</button>
-        <button class="login-button">Log In</button>
-        <button class="signup-button">Sign Up</button>
+        <% if (isValidUser) { %>
+          <button class="compose-button">Compose</button>
+          <form style="display: inline" action="/logout" method="POST">
+            <input class="logout-button" type="submit" value="Log Out">
+          </form>
+        <% } else { %>
+          <button class="login-button">Log In</button>
+          <button class="signup-button">Sign Up</button>
+        <% } %>
       </div>
     </nav>
 
     <!-- Page-specific (main) content here -->
   <main class="container">
+    <% if (isValidUser) { %>
       <section class="new-tweet-container">
         <div class="new-tweet">
           <h2 class="compose-tweet">Compose Tweet</h2>
@@ -57,7 +64,7 @@
           </div>
         </div>
       </section>
-     
+     <% } %>
     <section class="all-tweets">
 
     </section>
