--- a/public/views/urls_login.ejs
+++ b/public/views/urls_login.ejs
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i" rel="stylesheet">
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="../styles/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="../styles/css-stylesheets/style.css" type="text/css" />
 
     <!-- External JS -->
     <script type="text/javascript" src="../vendor/jquery-2.2.3.min.js"></script>
