--- a/public/views/urls_signup.ejs
+++ b/public/views/urls_signup.ejs
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:400,400i,700,700i" rel="stylesheet">
 
     <!-- App CSS -->
-    <link rel="stylesheet" href="../styles/css/style.css" type="text/css" />
+    <link rel="stylesheet" href="../styles/css-stylesheets/style.css" type="text/css" />
 
     <!-- External JS -->
     <script type="text/javascript" src="../vendor/jquery-2.2.3.min.js"></script>
@@ -32,11 +32,11 @@
           <h2>Sign Up</h2>
           <form id="signup-form" action="/signup" method="POST">
             <h3>First Name:</h3>
-            <input class="signup-field" type="text" name="firstName" placeholder="Please enter your first name..."></input>
+            <input class="signup-field" maxlength="30" type="text" name="firstName" placeholder="Please enter your first name..."></input>
             <h3>Last Name:</h3>
-            <input class="signup-field" type="text" name="lastName" placeholder="Please enter your last name..."></input>
+            <input class="signup-field" maxlength="30" type="text" name="lastName" placeholder="Please enter your last name..."></input>
             <h3>Username:</h3>
-            <input class="signup-field" type="text" name="username" placeholder="Please enter your desired username..."></input>
+            <input class="signup-field" maxlength="50" type="text" name="username" placeholder="Please enter your desired username..."></input>
             <h3>Password:</h3>
             <input class="signup-field" type="password" name="password" autocomplete="off" placeholder="Please enter a password..."></input>
             <input class="signup-form-button" type="submit" value="Sign Up"></input>
