Tweets are now tied to the user who is signed in. Only signed in users can post tweets. All users (logged in or not) can still view tweets.

--- a/public/views/urls_signup.ejs
+++ b/public/views/urls_signup.ejs
@@ -16,8 +16,7 @@
     <script type="text/javascript" src="../vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
-    <script type="text/javascript" src="/scripts/top-navigation.js"></script>
-    <script type="text/javascript" src="../scripts/signup-jquery.js"></script>
+    <script type="text/javascript" src="/scripts/top-navigation-links.js"></script>
 
   </head>
   <body>
