--- a/public/views/urls_index.ejs
+++ b/public/views/urls_index.ejs
@@ -17,7 +17,7 @@
   
 
     <!-- App JS -->
-    <script type="text/javascript" src="/scripts/top-navigation.js"></script>
+    <script type="text/javascript" src="/scripts/top-navigation-links.js"></script>
     <script type="text/javascript" src="/scripts/app.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
   </head>
@@ -53,6 +53,7 @@
           <form id="post-tweet" action="/tweets/" method="POST">
             <textarea class="textarea" name="text" placeholder="What are you humming about?"></textarea>
             <input class="tweet-button" type="submit" value="Tweet">
+            <input type="hidden" id="user" name="user" value="<%= JSON.stringify(user) %>">
             <span class="counter">140</span>
           </form>
           <div class="error-container">
