--- a/public/views/urls_login.ejs
+++ b/public/views/urls_login.ejs
@@ -16,8 +16,7 @@
     <script type="text/javascript" src="../vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
-    <script type="text/javascript" src="/scripts/top-navigation.js"></script>
-    <script type="text/javascript" src="../scripts/login-jquery.js"></script>
+    <script type="text/javascript" src="/scripts/top-navigation-links.js"></script>
 
 </head>
   <body>
@@ -32,9 +31,9 @@
         <h2>Log In</h2>
           <form id="login-form" action="/login" method="POST">
             <h3>Username:</h3>
-            <input class="login-field" type="text" name="username" placeholder="Please enter your username..."></input>
+            <input class="login-field" type="text" name="username" autocomplete="on" placeholder="Please enter your username..."></input>
             <h3>Password:</h3>
-            <input class="login-field" type="password" name="password" autocomplete="off" placeholder="Please enter your password..."></input>
+            <input class="login-field" type="password" name="password" autocomplete="on" placeholder="Please enter your password..."></input>
             <input class="login-form-button" type="submit" value="Log In"></input>
             <span class="nav-to-signup">
               <p style="display: inline">Don't have an account? </p>
