--- a/public/styles/scss-stylesheets/new-tweet.scss
+++ b/public/styles/scss-stylesheets/new-tweet.scss
@@ -2,7 +2,7 @@
     display: initial;
 }
 
-.new-tweet-container .new-tweet {
+.new-tweet {
     display: inline-block;
     background-color: rgb(236, 236, 236);
     width: 400px;
@@ -14,32 +14,34 @@
     /* Creates padding inside of the container */
 }
 
-.new-tweet-container .new-tweet h2 {
+.new-tweet h2 {
    margin-top: 10px;
    /* Moves the "Compose Tweet" text down from the top */
    margin-bottom: 2px;
    /* Removes space between "Compose Tweet" and the solid line */
 }
 
-.new-tweet-container .new-tweet .textarea {
+.new-tweet .textarea {
     padding-left: 10px;
     padding-top: 10px;
     width: 100%;
 }
 
-.new-tweet-container .new-tweet .tweet-button:hover {
+.tweet-button:hover {
     background-color: #418ff4;
 }
 
-.new-tweet-container .new-tweet .counter {
+.counter {
     float: right;
+    position: relative;
+    bottom: 10px;
     background-color: rgb(236, 236, 236);
 }
-.new-tweet-container .new-tweet .error-container {
+.error-container {
     display: none;
 }
 
-.new-tweet-container .new-tweet .error-container .error {
+.error {
     display: inline-block;
     text-align: center;
     opacity: 1;
@@ -54,19 +56,17 @@
     padding-bottom: 10px;
     margin: 0 auto;
     margin-left: -10px;
-}
-
-.new-tweet-container  .new-tweet .error-container .error h2 {
-    font-weight: bold;
-    opacity: 1;
-    margin-top: -5px;
-}
-
-.new-tweet-container .new-tweet .error-container .error p {
-    opacity: 1;
-}
-
-.new-tweet-container .new-tweet .error-container .error button {
-    border-radius: 10px;
-    width: 70px;
+    h2 {
+        font-weight: bold;
+        opacity: 1;
+        margin-top: -5px;
+    }
+    p {
+        opacity: 1;
+    }
+    button {
+        border-radius: 10px;
+        width: 70px;
+    }
+    
 }
