--- a/public/styles/scss-stylesheets/tweets-container.scss
+++ b/public/styles/scss-stylesheets/tweets-container.scss
@@ -11,85 +11,65 @@
     height: 210px;
     border: solid 1px;
     border-radius: 10px;
+    header {
+        display: inline-block;
+        background-color: lightblue;
+        padding: 12px;
+        height: 45%;
+        width: 100%;
+        .avatar {
+            display: inline-block;
+            height: 60px;
+            width: 60px;
+            border-radius: 5px;
+        }
+        h2 {
+            display: inline-block; 
+            position: relative;
+            bottom: 40px;
+            margin-left: 8px;
+        }
+        .handle {
+            float: right;
+            margin: 0px;
+        }
+    }
+    .content {
+        position: relative;
+        background-color: white;
+        height: 35%;
+        width: 100%;
+        padding-top: 10px;
+        padding-left: 10px;
+        margin: 0px;
+    }
+    footer {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        height: 20%;
+        width: 100%;
+        padding-left: 10px;
+        border-top: solid 0.5px;
+        div.icons {
+            display: none;
+            align-items: center;
+            padding-right: 6px;
+            p.likes-count {
+                position: relative;
+                top: 2px;
+            }
+            .fa-flag, .fa-thumbs-up, .fa-retweet {
+                padding-left: 6px;
+                padding-right: 6px;
+            }
+        }
+    }
 }
 
 .tweet:hover {
-    opacity: 1;   
-}
-.tweet .content {
-    position: relative;
-    background-color: white;
-    height: 35%;
-    width: 100%;
-    padding-top: 10px;
-    padding-left: 10px;
-    margin: 0px;
-}
-
-/* base */
-.tweet header {
-    display: inline-block;
-    background-color: lightblue;
-    padding: 12px;
-    height: 45%;
-    width: 100%;
-}
-
-.tweet footer {
-    height: 20%;
-    width: 100%;
-    padding-left: 5px;
-    padding-top: 10px;
-    /* margin-top: 5px; */
-    border-top: solid 0.5px;
-}
-
-.tweet header .avatar {
-    display: inline-block;
-    height: 60px;
-    width: 60px;
-    border-radius: 5px;
-}
-
-.tweet header h2 {
-    display: inline-block; 
-    position: relative;
-    bottom: 40px;
-    margin-left: 8px;
-}
-
-.tweet header .handle {
-    float: right;
-    margin: 0px;
-}
-
-.tweet footer .date-posted {
-    display: inline;
-}
-
-.tweet footer .icons {
-    float: right;
-    display: none;
-    position: relative;
-    right: 20px;
-    margin: 0px;
-}
-
-.tweet:hover footer .icons {
-    display: flex;
-}
-
-.tweet footer .icons .fas .fa-flag {
-    width: 30px;
-    height: 30px;
-}
-
-.tweet footer .icons .far .fa-thumbs-up {
-    width: 30px;
-    height: 30px;
-}
-
-.tweet footer .icons.fas .fa-retweet {
-    width: 30px;
-    height: 30px;
+    opacity: 1;
+    div.icons {
+        display: flex;
+    }
 }
