Fixed an issue with the links in the login and register pages

--- a/public/views/urls_login.ejs
+++ b/public/views/urls_login.ejs
@@ -37,7 +37,7 @@
             <input class="login-form-button" type="submit" value="Log In"></input>
             <span class="nav-to-signup">
               <p style="display: inline">Don't have an account? </p>
-              <button type="button" class="button-to-signup" onclick="window.location.href='http://localhost:8080/signup'">Sign Up</button>
+              <button type="button" class="button-to-signup" onclick="window.location.href='<%= webURL %>'">Sign Up</button>
             </span>
           </form>
       </section>
