--- a/public/views/urls_signup.ejs
+++ b/public/views/urls_signup.ejs
@@ -41,7 +41,7 @@
             <input class="signup-form-button" type="submit" value="Sign Up"></input>
             <span class="nav-to-login">
               <p style="display: inline">Already have an account? </p>
-              <button type="button" class="button-to-login" onclick="window.location.href='http://localhost:8080/login'">Log In</button>
+              <button type="button" class="button-to-login" onclick="window.location.href='<%= webURL %>'">Log In</button>
             </span>
           </form>
         </section>
