--- a/public/views/urls_login.ejs
+++ b/public/views/urls_login.ejs
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="../vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
-    <script type="text/javascript" src="/scripts/top-navigation-links.js"></script>
+    <script type="text/javascript" src="/scripts/navigation-links.js"></script>
 
 </head>
   <body>
@@ -37,7 +37,7 @@
             <input class="login-form-button" type="submit" value="Log In"></input>
             <span class="nav-to-signup">
               <p style="display: inline">Don't have an account? </p>
-              <button type="button" class="button-to-signup" onclick="window.location.href='<%= webURL %>/signup'">Sign Up</button>
+              <button type="button" class="button-to-signup">Sign Up</button>
             </span>
           </form>
       </section>
