--- a/public/views/urls_signup.ejs
+++ b/public/views/urls_signup.ejs
@@ -16,7 +16,7 @@
     <script type="text/javascript" src="../vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
-    <script type="text/javascript" src="/scripts/top-navigation-links.js"></script>
+    <script type="text/javascript" src="/scripts/navigation-links.js"></script>
 
   </head>
   <body>
@@ -41,7 +41,7 @@
             <input class="signup-form-button" type="submit" value="Sign Up"></input>
             <span class="nav-to-login">
               <p style="display: inline">Already have an account? </p>
-              <button type="button" class="button-to-login" onclick="window.location.href='<%= webURL %>/login'">Log In</button>
+              <button type="button" class="button-to-login">Log In</button>
             </span>
           </form>
         </section>
