--- a/public/styles/scss-stylesheets/base-style.scss
+++ b/public/styles/scss-stylesheets/base-style.scss
@@ -18,9 +18,9 @@ body {
 }
 
 .container {
-  width: 450px;
+  width: 55vw;
   height: 100% (+35px);
   margin: 80px auto;
-  padding: 25px;
+  padding: 15px;
   background-color: white;
 }
