--- a/public/styles/scss-stylesheets/new-tweet.scss
+++ b/public/styles/scss-stylesheets/new-tweet.scss
@@ -5,7 +5,7 @@
 .new-tweet {
     display: inline-block;
     background-color: rgb(236, 236, 236);
-    width: 400px;
+    width: 100%;
     height: 158px;
     border: solid 0.5px;
     margin: 0px auto;
