--- a/public/styles/scss-stylesheets/tweets-container.scss
+++ b/public/styles/scss-stylesheets/tweets-container.scss
@@ -5,52 +5,52 @@
 .tweet {
     opacity: 0.4;
     background-color: rgb(236, 236, 236);
-    width: 400px;
+    width: 100%;
     margin-bottom:5px;
     overflow: hidden;
-    height: 210px;
     border: solid 1px;
     border-radius: 10px;
     header {
-        display: inline-block;
+        display: inline-flex;
+        justify-content: space-between;
         background-color: lightblue;
-        padding: 12px;
-        height: 45%;
+        padding: 0.5em;
         width: 100%;
+        .header-right {
+            display: inline-flex;
+            align-items: center;
+        }
+        .header-left {
+            display: inline-flex;
+            align-items: center;
+            .header-name {
+                font-size: 1.5em;
+            }
+        }
         .avatar {
-            display: inline-block;
             height: 60px;
             width: 60px;
             border-radius: 5px;
-        }
-        h2 {
-            display: inline-block; 
-            position: relative;
-            bottom: 40px;
-            margin-left: 8px;
-        }
-        .handle {
-            float: right;
-            margin: 0px;
+            margin-right: 0.5em;
         }
     }
     .content {
         position: relative;
         background-color: white;
-        height: 35%;
+        min-height: 80px;
         width: 100%;
-        padding-top: 10px;
-        padding-left: 10px;
+        padding: 10px;
         margin: 0px;
+        overflow-wrap: break-word;
     }
     footer {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        height: 20%;
+        padding: 0.1em 0.1em 0.1em 0.5em;
         width: 100%;
-        padding-left: 10px;
         border-top: solid 0.5px;
+        height: inherit;
         div.icons {
             display: none;
             align-items: center;
@@ -60,8 +60,8 @@
                 top: 2px;
             }
             .fa-flag, .fa-thumbs-up, .fa-retweet {
-                padding-left: 6px;
-                padding-right: 6px;
+                padding-left: 3px;
+                padding-right: 3px;
             }
         }
     }
