--- a/public/styles/css-stylesheets/style.css
+++ b/public/styles/css-stylesheets/style.css
@@ -256,7 +256,7 @@ body {
 
 .login-div, .signup-div {
   text-align: center;
-  width: 500px;
+  width: 55vw;
   border: 1px solid black;
   background-color: white;
   padding: 5px 10px 5px 10px;
