--- a/public/styles/scss-stylesheets/login-signup.scss
+++ b/public/styles/scss-stylesheets/login-signup.scss
@@ -9,7 +9,7 @@
 
 .login-div, .signup-div {
   text-align: center;
-  width: 500px;
+  width: 55vw;
   border: 1px solid black;
   background-color: white;
   padding: 5px 10px 5px 10px;
