Fixed an issue with displaying sensitive data in index.js

--- a/public/styles/css-stylesheets/style.css
+++ b/public/styles/css-stylesheets/style.css
@@ -46,7 +46,7 @@
 
 .signup-button, .login-button, .logout-button {
   display: inline-block;
-  width: 64px;
+  min-width: 6vw;
   font-size: 1em;
   background-color: #00a087;
   color: white;
@@ -66,9 +66,6 @@
   border: 2px black solid;
 }
 
-/* .compose-button .logo { */
-/* to fill out later */
-/* } */
 /*
  * http://www.paulirish.com/2012/box-sizing-border-box-ftw/
  * https://css-tricks.com/international-box-sizing-awareness-day/
